--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
     color: #fff;
 }
 
-
 /* Typeography General*/
 h1 {
     font-family: 'Fira Sans', sans-serif;
@@ -87,6 +86,7 @@ section {
     color: #fff;
     transition: ease 0.3s all;
 }
+
 
 /* Header Styles */
 .page__header {
@@ -194,8 +194,8 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.active-section {
-    background: rgb(35, 33, 112);
-    background: linear-gradient(0deg, rgba(35, 33, 112, 0.25) 25%, rgba(35, 33, 112, 0) 100%);
+    background: rgb(12, 10, 53);
+    background: linear-gradient(0deg, rgba(12, 10, 53, 0.25) 25%, rgba(12, 10, 54, 0) 100%);
 }
 
 section.active-section .landing__container::before {
@@ -210,7 +210,6 @@ section.active-section .landing__container::after {
 
 .menu__link.active-section {
     background: rgb(135, 255, 239);
-    
 }
 
 /* Section Active Styles Keyframe Animations */
@@ -229,7 +228,7 @@ section.active-section .landing__container::after {
 
 /* Media Styles */
 /* Small Screens */
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 425px) {
     .landing__container {
         padding: 1.1em;
     }
@@ -242,6 +241,10 @@ section.active-section .landing__container::after {
 
     .navbar__menu .menu__link {
         padding: 0.25em;
+    }
+
+    .navbar__menu .menu__link:hover {
+        pointer-events: none;
     }
 
     h1 {
@@ -261,7 +264,7 @@ section.active-section .landing__container::after {
 }
 
 /* Medium Screens */
-@media only screen and (min-width: 401px) and (max-width: 750px) {
+@media only screen and (min-width: 426px) and (max-width: 775px) {
     .landing__container {
         padding: 1.1em;
     }
@@ -274,6 +277,10 @@ section.active-section .landing__container::after {
 
     .navbar__menu .menu__link {
         padding: 0.6em;
+    }
+
+    .navbar__menu .menu__link:hover {
+        pointer-events: none;
     }
 
     h1 {
